force-app/main/default/objects/CA_Customer_Assessment__c/fields/Packages_Or_Pallets_Ship_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Packages_Or_Pallets_Ship_Per_Day__c</fullName>
    <description>How many packages / pallets do they ship per day.</description>
    <label>Packages Or Pallets Ship Per Day</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>