force-app/main/default/objects/CA_Customer_Assessment__c/fields/Packaging_Description__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Description__c</fullName>
    <label>Packaging Description</label>
    <type>TextArea</type>
</CustomField>