force-app/main/default/objects/CA_Customer_Assessment__c/fields/Party_NAID__c.field-meta.xml
<CustomField>
    <fullName>Party_NAID__c</fullName>
    <label>MLA Party#/NAID#</label>
    <length>15</length>
    <type>Text</type>
</CustomField>