force-app/main/default/objects/CA_Customer_Assessment__c/fields/Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This will automatically default to the Primary Sales Rep attached to the Account.  This cannot be changed.  If changed, it will auto revert back to the Primary Sales Rep from the account.</inlineHelpText>
    <label>Primary Sales Rep</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipName>Customer_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>