force-app/main/default/objects/CA_Customer_Assessment__c/fields/Print_Match_Noosh__c.field-meta.xml
<CustomField>
    <fullName>Print_Match_Noosh__c</fullName>
    <label>Print Match (Noosh)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>