force-app/main/default/objects/CA_Customer_Assessment__c/fields/Print_Match_Noosh_Description__c.field-meta.xml
<CustomField>
    <fullName>Print_Match_Noosh_Description__c</fullName>
    <label>Print Match (Noosh) Description</label>
    <type>TextArea</type>
</CustomField>