force-app/main/default/objects/CA_Customer_Assessment__c/fields/PSR_From_Acct__c.field-meta.xml
<CustomField>
    <fullName>PSR_From_Acct__c</fullName>
    <formula>TP_Account__r.Primary_Sales_Rep_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSR From Acct</label>
    <type>Text</type>
</CustomField>