force-app/main/default/objects/CA_Customer_Assessment__c/fields/Punch_Out_V1__c.field-meta.xml
<CustomField>
    <fullName>Punch_Out_V1__c</fullName>
    <label>Punch Out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>