force-app/main/default/objects/CA_Customer_Assessment__c/fields/Punch_Out_V1_Description__c.field-meta.xml
<CustomField>
    <fullName>Punch_Out_V1_Description__c</fullName>
    <label>Punch Out - V1 Description</label>
    <type>TextArea</type>
</CustomField>