force-app/main/default/objects/CA_Customer_Assessment__c/fields/Punch_Out_V2__c.field-meta.xml
<CustomField>
    <fullName>Punch_Out_V2__c</fullName>
    <label>Punch Out - V2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>