force-app/main/default/objects/CA_Customer_Assessment__c/fields/Reassign_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Sales_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassign Sales Rep</label>
    <type>Checkbox</type>
</CustomField>