force-app/main/default/objects/CA_Customer_Assessment__c/fields/RepManagedBuyGroupDescription__c.field-meta.xml
<CustomField>
    <fullName>RepManagedBuyGroupDescription__c</fullName>
    <label>Rep Managed Buy Group Description</label>
    <type>TextArea</type>
</CustomField>