force-app/main/default/objects/CA_Customer_Assessment__c/fields/Reporting_LEEDS_Description__c.field-meta.xml
<CustomField>
    <fullName>Reporting_LEEDS_Description__c</fullName>
    <label>Reporting - LEEDS Description</label>
    <type>TextArea</type>
</CustomField>