force-app/main/default/objects/CA_Customer_Assessment__c/fields/Retail_Description__c.field-meta.xml
<CustomField>
    <fullName>Retail_Description__c</fullName>
    <label>Retail Description</label>
    <type>TextArea</type>
</CustomField>