force-app/main/default/objects/CA_Customer_Assessment__c/fields/Saalfeld__c.field-meta.xml
<CustomField>
    <fullName>Saalfeld__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saalfeld?</label>
    <type>Checkbox</type>
</CustomField>