force-app/main/default/objects/CA_Customer_Assessment__c/fields/Saalfeld_Description__c.field-meta.xml
<CustomField>
    <fullName>Saalfeld_Description__c</fullName>
    <label>Saalfeld? Description</label>
    <type>TextArea</type>
</CustomField>