force-app/main/default/objects/CA_Customer_Assessment__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <formula>TP_Account__r.Owner_Manager_Text_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager</label>
    <type>Text</type>
</CustomField>