force-app/main/default/objects/CA_Customer_Assessment__c/fields/SCWS_Description__c.field-meta.xml
<CustomField>
    <fullName>SCWS_Description__c</fullName>
    <label>SCWS Description</label>
    <type>TextArea</type>
</CustomField>