force-app/main/default/objects/CA_Customer_Assessment__c/fields/SCWS_Stock_Check_Web_Service__c.field-meta.xml
<CustomField>
    <fullName>SCWS_Stock_Check_Web_Service__c</fullName>
    <label>SCWS (Stock Check Web Service)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>