force-app/main/default/objects/CA_Customer_Assessment__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>IF( ISPICKVAL(TP_Account__r.Segment_2__c, &quot;F&quot;), &quot;Print&quot;, 
   if(ISPICKVAL(TP_Account__r.Segment_2__c, &quot;M&quot;), &quot;Facility Supplies&quot;,
      if(ISPICKVAL(TP_Account__r.Segment_2__c, &quot;P&quot;), &quot;Packaging&quot;,&quot;No Segment Selected&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>