force-app/main/default/objects/CA_Customer_Assessment__c/fields/Shipment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Mode__c</fullName>
    <description>How do they ship (LTL, Small Package, etc)</description>
    <inlineHelpText>How do they ship (LTL, Small Package, etc)</inlineHelpText>
    <label>Shipment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>