force-app/main/default/objects/CA_Customer_Assessment__c/fields/Smartsync_Description__c.field-meta.xml
<CustomField>
    <fullName>Smartsync_Description__c</fullName>
    <label>Smartsync Description</label>
    <type>TextArea</type>
</CustomField>