force-app/main/default/objects/CA_Customer_Assessment__c/fields/Special_Delivery_Handling__c.field-meta.xml
<CustomField>
    <fullName>Special_Delivery_Handling__c</fullName>
    <label>Special Delivery Handling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>