force-app/main/default/objects/CA_Customer_Assessment__c/fields/Special_Delivery_Handling_Description__c.field-meta.xml
<CustomField>
    <fullName>Special_Delivery_Handling_Description__c</fullName>
    <label>Special Delivery Handling Description</label>
    <type>TextArea</type>
</CustomField>