force-app/main/default/objects/CA_Customer_Assessment__c/fields/Summary_Billing_Automated__c.field-meta.xml
<CustomField>
    <fullName>Summary_Billing_Automated__c</fullName>
    <label>Summary Billing - Automated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>