force-app/main/default/objects/CA_Customer_Assessment__c/fields/Summary_Billing_Automated_Description__c.field-meta.xml
<CustomField>
    <fullName>Summary_Billing_Automated_Description__c</fullName>
    <label>Summary Billing - Automated Description</label>
    <type>TextArea</type>
</CustomField>