force-app/main/default/objects/CA_Customer_Assessment__c/fields/Summary_Billing_Manual__c.field-meta.xml
<CustomField>
    <fullName>Summary_Billing_Manual__c</fullName>
    <inlineHelpText>Help text can be added to provide further explanation of fields.</inlineHelpText>
    <label>Summary Billing - Manual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>