force-app/main/default/objects/CA_Customer_Assessment__c/fields/Tax_Supported_Government_Description__c.field-meta.xml
<CustomField>
    <fullName>Tax_Supported_Government_Description__c</fullName>
    <label>Tax Supported/Government Description</label>
    <type>TextArea</type>
</CustomField>