force-app/main/default/objects/CA_Customer_Assessment__c/fields/Their_Customers__c.field-meta.xml
<CustomField>
    <fullName>Their_Customers__c</fullName>
    <description>Who do they sell to and do they buy from them? This could provide insight into potential opportunities.</description>
    <inlineHelpText>Who do they sell to and do they buy from them? This could provide insight into potential opportunities.</inlineHelpText>
    <label>Their Customers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>