force-app/main/default/objects/CA_Customer_Assessment__c/fields/Their_Vendors_Veritiv_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Their_Vendors_Veritiv_Competitors__c</fullName>
    <description>Who are we competing against in this account? Could be a competing technology.</description>
    <inlineHelpText>Who are we competing against in this account? Could be a competing technology.</inlineHelpText>
    <label>Their Vendors (Veritiv Competitors)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>