force-app/main/default/objects/CA_Customer_Assessment__c/fields/TP_Account__c.field-meta.xml
<CustomField>
    <fullName>TP_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Profiles</relationshipLabel>
    <relationshipName>Transition_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>