force-app/main/default/objects/CA_Customer_Assessment__c/fields/TP_Account_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>TP_Account_Bill_To__c</fullName>
    <formula>TP_Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Bill To</label>
    <type>Text</type>
</CustomField>