force-app/main/default/objects/CA_Customer_Assessment__c/fields/Training_Level_Required__c.field-meta.xml
<CustomField>
    <fullName>Training_Level_Required__c</fullName>
    <inlineHelpText>Webex, Video, Sales Rep, Onsite</inlineHelpText>
    <label>Training Level Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>