force-app/main/default/objects/CA_Customer_Assessment__c/fields/Training_Level_Required_Description__c.field-meta.xml
<CustomField>
    <fullName>Training_Level_Required_Description__c</fullName>
    <label>Training Level Required? Description</label>
    <type>TextArea</type>
</CustomField>