force-app/main/default/objects/CA_Customer_Assessment__c/fields/Unify_Order_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Unify_Order_Dashboard__c</fullName>
    <label>Unify/Order Dashboard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>