force-app/main/default/objects/CA_Customer_Assessment__c/fields/Unify_Order_Dashboard_Description__c.field-meta.xml
<CustomField>
    <fullName>Unify_Order_Dashboard_Description__c</fullName>
    <label>Unify/Order Dashboard Description</label>
    <type>TextArea</type>
</CustomField>