force-app/main/default/objects/CA_Customer_Assessment__c/fields/Unify_Type__c.field-meta.xml
<CustomField>
    <fullName>Unify_Type__c</fullName>
    <formula>IF(ispickval( TP_Account__r.Unify_Account_Type__c ,&quot;N&quot;), &quot;National Account&quot;, 
IF(ispickval( TP_Account__r.Unify_Account_Type__c ,&quot;D&quot;), &quot;Tax Supported&quot;,
IF(ispickval( TP_Account__r.Unify_Account_Type__c ,&quot;R&quot;), &quot;Enterprise Rep Account&quot;,  
IF(ispickval( TP_Account__r.Unify_Account_Type__c ,&quot;U&quot;), &quot;End User/Directed Buy&quot;, 
IF(ispickval( TP_Account__r.Unify_Account_Type__c ,&quot;C&quot;), &quot;Enterprise Manager Acct&quot;, &quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unify Type</label>
    <type>Text</type>
</CustomField>