force-app/main/default/objects/CA_Customer_Assessment__c/fields/Usage_Reports_Description__c.field-meta.xml
<CustomField>
    <fullName>Usage_Reports_Description__c</fullName>
    <label>Usage Reports Description</label>
    <type>TextArea</type>
</CustomField>