force-app/main/default/objects/CA_Customer_Assessment__c/fields/Vendor_Rebates_Description__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Rebates_Description__c</fullName>
    <label>Vendor Rebates Description</label>
    <type>TextArea</type>
</CustomField>