force-app/main/default/objects/CA_Customer_Assessment__c/fields/VMI__c.field-meta.xml
<CustomField>
    <fullName>VMI__c</fullName>
    <description>Manual Inventory sheet for Sales Rep to use to inventory customers product and build order</description>
    <inlineHelpText>Manual Inventory sheet for Sales Rep to use to inventory customers product and build order</inlineHelpText>
    <label>VMI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>