force-app/main/default/objects/CA_Customer_Assessment__c/fields/VMI_Description__c.field-meta.xml
<CustomField>
    <fullName>VMI_Description__c</fullName>
    <label>VMI Description</label>
    <type>TextArea</type>
</CustomField>