force-app/main/default/objects/CA_Customer_Assessment__c/fields/Wide_Format_Grand_Format_Description__c.field-meta.xml
<CustomField>
    <fullName>Wide_Format_Grand_Format_Description__c</fullName>
    <label>Wide Format/Grand Format Description</label>
    <type>TextArea</type>
</CustomField>