force-app/main/default/objects/CA_Customer_Assessment__c/fields/X3PL__c.field-meta.xml
<CustomField>
    <fullName>X3PL__c</fullName>
    <label>3PL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Customer Owned</fullName>
                <isActive>false</isActive>
                <label>Customer Owned</label>
            </value>
            <value>
                <fullName>Veritiv Provided</fullName>
                <isActive>false</isActive>
                <label>Veritiv Provided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>