force-app/main/default/objects/CA_Customer_Assessment__c/fields/X3PL_Customer_Owned_Items__c.field-meta.xml
<CustomField>
    <fullName>X3PL_Customer_Owned_Items__c</fullName>
    <label>3PL - Customer Owned Items</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>