force-app/main/default/objects/CA_Customer_Assessment__c/fields/X3PL_Customer_Owned_Items_Description__c.field-meta.xml
<CustomField>
    <fullName>X3PL_Customer_Owned_Items_Description__c</fullName>
    <label>3PL - Customer Owned Items Description</label>
    <type>TextArea</type>
</CustomField>