force-app/main/default/objects/CA_Customer_Assessment__c/fields/X3PL_Veritiv_Provided__c.field-meta.xml
<CustomField>
    <fullName>X3PL_Veritiv_Provided__c</fullName>
    <label>3PL - Veritiv Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>