force-app/main/default/objects/CA_Customer_Assessment__c/fields/X3PL_Veritiv_Uses_Description__c.field-meta.xml
<CustomField>
    <fullName>X3PL_Veritiv_Uses_Description__c</fullName>
    <label>3PL - Veritiv Uses Description</label>
    <type>TextArea</type>
</CustomField>