force-app/main/default/objects/CA_Customer_Assessment__c/fields/X3rd_Party_Portal_Entry__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Portal_Entry__c</fullName>
    <label>3rd Party Portal Entry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>