force-app/main/default/objects/CA_Customer_Assessment__c/fields/X3rd_Party_Portal_Entry_Description__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Portal_Entry_Description__c</fullName>
    <label>3rd Party Portal Entry Description</label>
    <type>TextArea</type>
</CustomField>