force-app/main/default/objects/CA_Customer_Assessment__c/fields/X4DecimalPricingDescription__c.field-meta.xml
<CustomField>
    <fullName>X4DecimalPricingDescription__c</fullName>
    <label>4 Decimal Pricing Description</label>
    <type>TextArea</type>
</CustomField>