force-app/main/default/objects/CA_Customer_Assessment__c/fields/YTD_Rebate__c.field-meta.xml
<CustomField>
    <fullName>YTD_Rebate__c</fullName>
    <inlineHelpText>YTD Rebates through August 2022 for NU</inlineHelpText>
    <label>YTD Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>