force-app/main/default/objects/CA_Customer_Assessment__c/fields/YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales__c</fullName>
    <inlineHelpText>YTD Sales through August 2022 for NU</inlineHelpText>
    <label>YTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>