force-app/main/default/objects/CA_Customer_Assessment__c/recordTypes/CS_Account_Profile.recordType-meta.xml
<RecordType>
    <fullName>CS_Account_Profile</fullName>
    <active>false</active>
    <label>CS Account Profile</label>
</RecordType>