force-app/main/default/objects/CA_Customer_Assessment__c/recordTypes/EVO_Conversion_Assessment.recordType-meta.xml
<RecordType>
    <fullName>EVO_Conversion_Assessment</fullName>
    <active>true</active>
    <description>Used for assessing customers as they move from VOS to EVO</description>
    <label>EVO Conversion Assessment</label>
</RecordType>