force-app/main/default/objects/CA_Customer_Assessment__c/recordTypes/Sales_Account_profile.recordType-meta.xml
<RecordType>
    <fullName>Sales_Account_profile</fullName>
    <active>true</active>
    <label>Sales Account profile</label>
</RecordType>