force-app/main/default/objects/CA_Customer_Assessment__c/recordTypes/VOS_Conversion_Assessment.recordType-meta.xml
<RecordType>
    <fullName>VOS_Conversion_Assessment</fullName>
    <active>true</active>
    <label>VOS Conversion Assessment</label>
</RecordType>