force-app/main/default/objects/CA_Customer_Assessment__c/validationRules/CA_VR_1.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_VR_1</fullName>
    <active>false</active>
    <errorConditionFormula>OR( 
AND( 
ISBLANK(TEXT(X3PL_Customer_Owned_Items__c)), 
NOT(ISBLANK(X3PL_Customer_Owned_Items_Description__c)) 
), 
AND( 
ISBLANK(TEXT(X3PL_Veritiv_Provided__c)), 
NOT(ISBLANK( X3PL_Veritiv_Provided_Description__c)) 
), 
AND( 
ISBLANK(TEXT(X3PL_Veritiv_Uses__c)), 
NOT(ISBLANK(X3PL_Veritiv_Uses_Description__c)) 
), 
AND( 
ISBLANK(TEXT(X3rd_Party_Portal_Entry__c)), 
NOT(ISBLANK(X3rd_Party_Portal_Entry_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Acct_Access_ULink__c )), 
NOT(ISBLANK(Acct_Access_ULink_Description__c )) 
), 
AND( 
ISBLANK(TEXT(Acct_Access_xpedx_com__c )), 
NOT(ISBLANK(Acct_Access_xpedx_com_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Amalgamated__c)), 
NOT(ISBLANK(Amalgamated_Description__c)) 
), 
AND( 
ISBLANK(TEXT(ASN__c)), 
NOT(ISBLANK(ASN_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Charge_and_Hold__c)), 
NOT(ISBLANK(Charge_and_Hold_Description__c)) 
), 
AND( 
ISBLANK(TEXT(CIRT__c)), 
NOT(ISBLANK(CIRT_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Consignment__c)), 
NOT(ISBLANK(Consignment_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Consolidated_PODs__c)), 
NOT(ISBLANK(Consolidated_PODs_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Converting__c)), 
NOT(ISBLANK(Converting_Description__c)) 
), 
AND( 
ISBLANK(TEXT(CSC_Support_Location__c)), 
NOT(ISBLANK(CSC_Support_Location_Description__c )) 
), 
AND( 
ISBLANK(TEXT(Cust_Flags_Amalgamate__c)), 
NOT(ISBLANK(Cust_Flags_Amalgamate_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Cust_Flags_Back_Order__c)), 
NOT(ISBLANK(Cust_Flags_Back_Order_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Cust_Flags_Blanket_Orders__c)), 
NOT(ISBLANK(Cust_Flags_Blanket_Orders_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Cust_Flags_Future_Order__c)), 
NOT(ISBLANK(Cust_Flags_Future_Order_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Cust_Flags_Hands_Free_Ecomm__c)), 
NOT(ISBLANK(Cust_Flags_Hands_Free_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Cust_Flags_Order_Minimum__c)), 
NOT(ISBLANK(Cust_Flags_Order_Minimum_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Cust_Flags_PO_Price_Match__c)), 
NOT(ISBLANK(Cust_Flags_PO_Price_Match_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Cust_Flags_Ship_Complete__c)), 
NOT(ISBLANK(Cust_Flags_Ship_Complete_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Custom_Bill_of_Lading__c )), 
NOT(ISBLANK(Custom_Bill_of_Lading_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Custom_Catalog_Marketing__c)), 
NOT(ISBLANK(Custom_Catalog_Marketing_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Customer_Portal__c)), 
NOT(ISBLANK(Customer_Portal_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Customer_Rebate__c)), 
NOT(ISBLANK(Customer_Rebate_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Customer_Web_Site_Link__c)), 
NOT(ISBLANK(Customer_Web_Site_Link_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Custom_Reports__c)), 
NOT(ISBLANK(Custom_Reports_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Cutting__c)), 
NOT(ISBLANK(Cutting_Description__c)) 
), 
AND( 
ISBLANK(TEXT(Delivery_Windows__c)), 
NOT(ISBLANK(Delivery_Windows_Description__c)) 
), 
AND( 
ISBLANK(TEXT(EDI__c)), 
NOT(ISBLANK(EDI_Description__c)) 
), 
AND( 
ISBLANK(TEXT(eInvoice__c)), 
NOT(ISBLANK(eInvoice_Description__c)) 
))</errorConditionFormula>
    <errorMessage>You have entered a description without the corresponding Picklist Value. Please either choose a value or remove the description.</errorMessage>
</ValidationRule>